2005-05-01  Bruno Haible  <bruno@clisp.org>

	* csharpexec-test.exe: New file.
	* csharpexec.m4 (gt_CSHARPEXEC): Test whether the C# engine can execute
	it.
	* Makefile.am (examplesbuildaux_DATA, EXTRA_DIST): Add
	csharpexec-test.exe.

2005-05-01  Bruno Haible  <bruno@clisp.org>

	* csharpcomp.m4 (gt_CSHARPCOMP): Check that cscc can actually compile
	a trivial program.
	Reported by Pierre <pierre42d@9online.fr>.

2005-05-23  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.5 released.

2005-04-11  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.4 released.

2005-03-22  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (examplesbuildauxdir): Renamed from examplesconfigdir.
	(examplesbuildaux_DATA): Renamed from examplesconfig_DATA.

2005-03-14  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.3 released.

2005-03-01  Bruno Haible  <bruno@clisp.org>

	* exitfail.m4, getopt.m4, hard-locale.m4, memchr.m4, pathmax.m4:
	* quote.m4, quotearg.m4, regex.m4, restrict.m4, strdup.m4, strerror.m4:
	* xreadlink.m4: Update from gnulib.

2005-02-24  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.2 released.

2005-02-13  Bruno Haible  <bruno@clisp.org>

	* locale-fr.m4 (gt_LOCALE_FR): If no locale was found or if the OS is
	Darwin7, use 'none' instead of 'fr_FR'.
	(gt_LOCALE_FR_UTF8): New macro.

2005-02-13  Bruno Haible  <bruno@clisp.org>

	* strtoul.m4: New file, from gnulib.
	* strtol.m4: New file, from gnulib.
	* Makefile.am (EXTRA_DIST): Add strtol.m4, strtoul.m4.

2005-01-28  Bruno Haible  <bruno@clisp.org>

	* stpncpy.m4 (gl_FUNC_STPNCPY): Undo the replacement here. Because of
	AIX, the replacement has to be done only after <string.h> is included,
	therefore not in config.h. stpncpy.h does the replacement, and
	stpncpy.c uses it.

2005-01-19  Bruno Haible  <bruno@clisp.org>

	* alloca.m4, allocsa.m4, backupfile.m4, canonicalize.m4, csharpcomp.m4:
	* csharpexec.m4, csharp.m4, eaccess.m4, eealloc.m4, error.m4:
	* exitfail.m4, extensions.m4, fnmatch.m4, gcj.m4, getline.m4: